# clappy

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
clappy/: __main__.py
